--- a/index.html
+++ b/index.html
@@ -16,35 +16,55 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="bootstrap/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        
+        <script>
+            $(window).on('scroll', function(){
+                    if($(window).scrollTop()){
+                        $('nav').addClass('black');
+                        $('.link').addClass('link-scroll');
+                    }
+                    else{
+                        $('nav').removeClass('black');
+                        $('.link').removeClass('link-scroll');
+                    }
+                })
+        </script>
     </head>
     <body>
         <section id="header">
-            <nav class="navbar navbar-expand-lg p-0 mt-0 navigation sticky-top navbar-trans">
+            <div class="overlay">
+            <nav class="navbar navbar-expand-lg p-0 navigation sticky-top navbar-trans">
                 <div class="container">
                     <a href="" class="navbar-brand brand mt-3 mr-5">
-                   <img src="img/nnhs-lms-logo.png" alt="" width="100px" class="mb-3">
-               </a>
-                    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
-                   <span class="toggler"><i class="fas fa-align-justify"></i></span>
-               </button>
+                        <img src="img/nnhs-lms-logo.png" alt="" width="100px" class="mb-3">
+                    </a>
+
+                    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav">
+                        <span> </span>
+                        <span> </span>
+                        <span> </span>
+                    </button>
+                    <!-- <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"> -->
+                   <!-- <span class="toggler"><i class="fas fa-align-justify"></i></span> -->
+               <!-- </button> -->
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item mr-3">
-                                <a href="" class="nav-link active">Home</a>
+                                <a href="#header" class="nav-link active link">Home</a>
                             </li>
 
                             <li class="nav-item mr-3">
-                                <a href="news_site.php" class="nav-link">About</a>
+                                <a href="#about" class="nav-link link">About</a>
                             </li>
 
                             <li class="nav-item mr-3">
-                                <a href="editorial_site.php" class="nav-link">Developers</a>
+                                <a href="#developer" class="nav-link link">Developers</a>
                             </li>
                         </ul>
 
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item ml-auto">
-                                <a href="feature_site.php" class="nav-link">Login</a>
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a href="login.html" class="nav-link link">Login</a>
                             </li>
                         </ul>
                     </div>
@@ -53,13 +73,176 @@
 
             <div class="container">
                 <div class="row">
-                    <div class="inner-container m-auto text-center">
+                    <div class="inner-container text-center">
                         <h1 class="m-auto inner-heading">Navotas National High School</h1>
                         <hr>
                         <p class="inner-desc">Learning Management System</p>
+                        <a href="login.html" class="btn btn-lg btn-outline-secondary">LOGIN</a>
                     </div>
                 </div>
             </div>
+          </div>
         </section>
+
+        <section id="about">
+            <div class="container">
+                <div class="row mb-5">
+                    <div class="col-md-6 text-center">
+                        <img src="img/student.png" class="img-fluid" alt="student" width="400px">
+                    </div>
+                    <div class="col-md-6">
+                        <h1 class="main-heading">STUDENT</h1>
+                        <p class="desc">The easiest way to track your own academic performance, by accessing your subject's virtual classroom in just by few clicks. Anytime! Anywhere!</p>
+                        <div class="container d-md-none d-sm-none d-none d-lg-block">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img src="img/answer-exams.png" alt="" class="img-fluid">
+                                </div>
+                                <div class="col-md-4">
+                                    <img src="img/submit-your-hw.png" alt="" class="img-fluid">
+                                </div>
+                                <div class="col-md-4">
+                                    <img src="img/doc-repo.png" alt="" class="img-fluid">
+                                </div>
+                            </div>
+                        </div>
+                        <a href="" class="btn btn-submit btn-block mt-5">Sign-up as STUDENT</a>
+                    </div>
+                </div>
+                <hr>
+                <div class="row mb-5">
+                    <div class="col-md-6 text-center">
+                            <img src="img/teacher.png" class="img-fluid" alt="teacher" width="400px">
+                    </div>
+                    <div class="col-md-6">
+                        <h1 class="main-heading">TEACHER</h1>
+                        <p class="desc">Share your expertise in a much innovative way, by giving online exams, homeworks and activities. Together with an online record of your students' activity results.</p>
+                        <div class="container d-md-none d-sm-none d-none d-lg-block">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img src="img/answer-exams.png" alt="" class="img-fluid">
+                                </div>
+                                <div class="col-md-4">
+                                    <img src="img/submit-your-hw.png" alt="" class="img-fluid">
+                                </div>
+                                <div class="col-md-4">
+                                    <img src="img/doc-repo.png" alt="" class="img-fluid">
+                                </div>
+                            </div>
+                        </div>
+                        <a href="" class="btn btn-submit btn-block mt-5">Sign-up as TEACHER</a>
+                    </div>
+                </div>
+                <hr>
+                <div class="row mb-5">
+                    <div class="col-md-6 text-center">
+                        <img src="img/parent.png" class="img-fluid" alt="parent" width="400px">
+                    </div>
+                    <div class="col-md-6">
+                        <h1 class="main-heading">PARENT</h1>
+                        <p class="desc">Monitor your child's academic performance, by knowing the school activities and homework he submitted. And by knowing examination results.</p>
+                        <div class="container d-md-none d-sm-none d-none d-lg-block">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img src="img/answer-exams.png" alt="" class="img-fluid">
+                                </div>
+                                <div class="col-md-4">
+                                    <img src="img/submit-your-hw.png" alt="" class="img-fluid">
+                                </div>
+                                <div class="col-md-4">
+                                    <img src="img/doc-repo.png" alt="" class="img-fluid">
+                                </div>
+                            </div>
+                        </div>
+                        <a href="" class="btn btn-submit btn-block mt-5">Sign-up as PARENT</a>
+                    </div>
+                </div>
+                <hr>
+            </div>
+        </section>
+        
+        <section id="developer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="card text-center dev-panel">
+                            <div class="card-body">
+                                <img src="img/kenneth.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3 dev-pic">
+                                    <h3>Kenneth H. Canada</h3>
+                                    <h5 class="text-muted">Front-End Developer</h5>
+                                    <p class="dev-desc">Currently taking up Bachelor of Science in Information Technology (BSIT) at the Polytechnic University of the Philippines (PUP) he likes to Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                        <div class="d-flex flex-row justify-content-center">
+                                            <div class="p-4">
+                                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                            </div>
+                                            <div class="p-4">
+                                                <a href="#"><i class="fab fa-github"></i></a>
+                                            </div>
+                                            <div class="p-4">
+                                                <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                                            </div>
+                                        </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                            <div class="card text-center dev-panel">
+                                <div class="card-body">
+                                    <img src="img/ryan.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3 dev-pic">
+                                        <h3>Ryan Joseph R. Samonte</h3>
+                                        <h5 class="text-muted">Back-End Developer</h5>
+                                        <p class="dev-desc">Currently taking up Bachelor of Science in Information Technology (BSIT) at the Polytechnic University of the Philippines (PUP) he likes to learn new things, he also enjoys playing basketball.</p>
+                                            <div class="d-flex flex-row justify-content-center">
+                                                <div class="p-4">
+                                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                                </div>
+                                                <div class="p-4">
+                                                    <a href="#"><i class="fab fa-github"></i></a>
+                                                </div>
+                                                <div class="p-4">
+                                                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                                                </div>
+                                            </div>
+                                </div>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </section>
+
+        <footer id="main-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3 text-center">
+                        <img src="img/nnhs-lms-logo.png" alt="nnhs-logo" class="img-fluid" width="150px">
+                        <p class="cdate">&copy; 2018</p>
+                    </div>
+                    <div class="col-md-6 text-center center-panel">
+                        <ul>
+                            <li><a href="#header">HOME</a></li>
+                            <li><a href="#about">ABOUT</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#developer">DEVELOPERS</a></li>
+                            <li><a href="login.html">LOGIN</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <ul>
+                            <li><a href="index.html"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#about"><i class="fab fa-github"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+        <a href="javascript:" id="return-to-top" class="top-arr">
+            <i class="fas fa-chevron-up"></i>
+        </a>
+
+        <script src="js/index.js"></script>
+        <script src='js/jquery-3.3.1.min.js'></script>
     </body>
 </html>
