--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
                     if($(window).scrollTop()){
                         $('nav').addClass('black');
                         $('.link').addClass('link-scroll');
+                        $('.toggler-span').addClass('toggler-span-scroll');
                     }
                     else{
                         $('nav').removeClass('black');
                         $('.link').removeClass('link-scroll');
+                        $('.toggler-span').removeClass('toggler-span-scroll');
                     }
                 })
         </script>
@@ -40,9 +42,9 @@
                     </a>
 
                     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav">
-                        <span> </span>
-                        <span> </span>
-                        <span> </span>
+                        <span class="toggler-span"> </span>
+                        <span class="toggler-span"> </span>
+                        <span class="toggler-span"> </span>
                     </button>
                     <!-- <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"> -->
                    <!-- <span class="toggler"><i class="fas fa-align-justify"></i></span> -->
@@ -64,7 +66,7 @@
 
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="login.html" class="nav-link link">Login</a>
+                                <a href="login.php" class="nav-link link">Login</a>
                             </li>
                         </ul>
                     </div>
@@ -77,7 +79,7 @@
                         <h1 class="m-auto inner-heading">Navotas National High School</h1>
                         <hr>
                         <p class="inner-desc">Learning Management System</p>
-                        <a href="login.html" class="btn btn-lg btn-outline-secondary">LOGIN</a>
+                        <a href="login.php" class="btn btn-lg btn-outline-secondary">LOGIN</a>
                     </div>
                 </div>
             </div>
@@ -130,7 +132,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="" class="btn btn-submit btn-block mt-5">Sign-up as TEACHER</a>
+                        <a href="prof-signup.php" class="btn btn-submit btn-block mt-5" target="_blank">Sign-up as TEACHER</a>
                     </div>
                 </div>
                 <hr>
