--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>NNHS</title>
+        <title>| NNHS</title>
 
-        <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-        <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="icon" href="favicon.png">
+
+        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         <link href="fonts/webfonts/fontawesome-all.css" rel="stylesheet">
+        <link rel="stylesheet" href="gijgo/css/gijgo.min.css">
         <link rel="stylesheet" href="css/style.css">
 
-        <script
-          src="https://code.jquery.com/jquery-3.1.1.min.js"
-          integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-          crossorigin="anonymous"></script>
-        <script src="semantic/dist/semantic.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="bootstrap/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script src="jquery/dist/jquery.min.js"></script>
+        <script src="jquery/dist/jquery.slim.min.js"></script>
+        <script src="popper.js/dist/popper.min.js"></script>
+        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="gijgo/js/gijgo.min.js"></script>
         
         <script>
             $(window).on('scroll', function(){
@@ -38,7 +39,7 @@
             <nav class="navbar navbar-expand-lg p-0 navigation sticky-top navbar-trans">
                 <div class="container">
                     <a href="" class="navbar-brand brand mt-3 mr-5">
-                        <img src="img/nnhs-lms-logo.png" alt="" width="100px" class="mb-3">
+                        <img src="img/brand-pic-1.png" alt="" width="200px" class="mb-3">
                     </a>
 
                     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav">
@@ -76,9 +77,9 @@
             <div class="container">
                 <div class="row">
                     <div class="inner-container text-center">
-                        <h1 class="m-auto inner-heading">Navotas National High School</h1>
+                        <h1 class="m-auto inner-heading">NAVOTAS NATIONAL HIGH SCHOOL</h1>
                         <hr>
-                        <p class="inner-desc">Learning Management System</p>
+                        <p class="inner-desc">Innovated and Computerized Education</p>
                         <a href="login.php" class="btn btn-lg btn-outline-secondary">LOGIN</a>
                     </div>
                 </div>
@@ -216,8 +217,8 @@
         <footer id="main-footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3 text-center">
-                        <img src="img/nnhs-lms-logo.png" alt="nnhs-logo" class="img-fluid" width="150px">
+                    <div class="col-md-3 text-center mt-5">
+                        <img src="img/brand-pic-1.png" alt="nnhs-logo" class="img-fluid" width="150px">
                         <p class="cdate">&copy; 2018</p>
                     </div>
                     <div class="col-md-6 text-center center-panel">
